// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nextcloud /> should render Nextcloud 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <p>
    Before installing and configuring Nextcloud, it's important to first set up external storage, as using the router's internal flash memory can cause it to wear out quickly and affect performance. For more information, see the 
    <a
      href="https://docs.turris.cz/geek/nextcloud/nextcloud/"
      rel="noopener noreferrer"
      target="_blank"
    >
      documentation
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
    . 
    For the best results, it's recommended to use an external drive or SSD. You can easily configure external storage by using the 
    <a
      href="/storage"
      title="Go to Storage plugin"
    >
      Storage plugin
    </a>
    .
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Nextcloud Configuration
    </h2>
    <p>
      Create an administrator account for Nextcloud.
    </p>
    <form>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Username
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="1"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="2"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Nextcloud /> should render Nextcloud configured 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <p>
    Before installing and configuring Nextcloud, it's important to first set up external storage, as using the router's internal flash memory can cause it to wear out quickly and affect performance. For more information, see the 
    <a
      href="https://docs.turris.cz/geek/nextcloud/nextcloud/"
      rel="noopener noreferrer"
      target="_blank"
    >
      documentation
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
    . 
    For the best results, it's recommended to use an external drive or SSD. You can easily configure external storage by using the 
    <a
      href="/storage"
      title="Go to Storage plugin"
    >
      Storage plugin
    </a>
    .
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Nextcloud Configuration
    </h2>
    <p>
      Create an administrator account for Nextcloud.
    </p>
    <div
      class="text-muted text-center"
    >
      <p
        class="mb-2"
      >
        Congratulations!🎉
      </p>
      <p
        class="mb-0"
      >
        You have configured your Nextcloud and now you can visit the 
        <a
          href="/nextcloud"
          rel="noopener noreferrer"
          target="_blank"
        >
          site
          <sup>
            <i
              class="fa"
            />
          </sup>
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Nextcloud /> should render Nextcloud configuring 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <p>
    Before installing and configuring Nextcloud, it's important to first set up external storage, as using the router's internal flash memory can cause it to wear out quickly and affect performance. For more information, see the 
    <a
      href="https://docs.turris.cz/geek/nextcloud/nextcloud/"
      rel="noopener noreferrer"
      target="_blank"
    >
      documentation
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
    . 
    For the best results, it's recommended to use an external drive or SSD. You can easily configure external storage by using the 
    <a
      href="/storage"
      title="Go to Storage plugin"
    >
      Storage plugin
    </a>
    .
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Nextcloud Configuration
    </h2>
    <p>
      Create an administrator account for Nextcloud.
    </p>
    <div
      class="d-flex justify-content-center align-items-center text-muted"
    >
      <div
        class="spinner-border spinner-border-sm text-primary"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
      <p
        class="ms-1 mb-0"
      >
        Configuring Nextcloud…
      </p>
    </div>
  </div>
</div>
`;

exports[`<Nextcloud /> should render error 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <p>
    Before installing and configuring Nextcloud, it's important to first set up external storage, as using the router's internal flash memory can cause it to wear out quickly and affect performance. For more information, see the 
    <a
      href="https://docs.turris.cz/geek/nextcloud/nextcloud/"
      rel="noopener noreferrer"
      target="_blank"
    >
      documentation
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
    . 
    For the best results, it's recommended to use an external drive or SSD. You can easily configure external storage by using the 
    <a
      href="/storage"
      title="Go to Storage plugin"
    >
      Storage plugin
    </a>
    .
  </p>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<Nextcloud /> should render spinner 1`] = `
<div>
  <h1>
    Nextcloud
  </h1>
  <p>
    Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home.
  </p>
  <p>
    Before installing and configuring Nextcloud, it's important to first set up external storage, as using the router's internal flash memory can cause it to wear out quickly and affect performance. For more information, see the 
    <a
      href="https://docs.turris.cz/geek/nextcloud/nextcloud/"
      rel="noopener noreferrer"
      target="_blank"
    >
      documentation
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
    . 
    For the best results, it's recommended to use an external drive or SSD. You can easily configure external storage by using the 
    <a
      href="/storage"
      title="Go to Storage plugin"
    >
      Storage plugin
    </a>
    .
  </p>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;
